fixed somespacing issues in mobile view

--- a/src/index.css
+++ b/src/index.css
@@ -132,7 +132,7 @@ body {
     }
 
     button {
-      @apply relative z-10 bg-primary text-white py-1.5 md:py-2 px-6 mt-28 lg:mt-2 mb-5 rounded-full font-semibold md:text-lg text-base cursor-pointer hover:bg-white hover:text-black transition-all duration-300 ease-in-out;
+      @apply relative z-10 bg-primary text-white py-1.5 md:py-2 px-6 mt-40 lg:mt-2 mb-5 rounded-full font-semibold md:text-lg text-base cursor-pointer hover:bg-white hover:text-black transition-all duration-300 ease-in-out;
     }
 
     p {
@@ -400,7 +400,7 @@ body {
   }
 
   footer {
-    @apply container mx-auto py-7 mt-12 md:mt-0 max-lg:px-5;
+    @apply container mx-auto py-7 mt-16 md:mt-0 max-lg:px-5;
 
     .info {
       @apply flex-between;
